Домашняя работа 4
Добавлен сервис WeatherApiService.

Реализована конфигурация RateLimiter.

Создан WebClient для работы с Weather API.

Реализован WeatherApiController для обработки запросов к /weather_api/current.

Добавлены модели данных для парсинга ответа от API.

Реализована обработка исключений API.

Обновлен openapi.yml.
