# SpringBootApp/src/main/java/ru/khodov/springbootapp/controllers/WeatherApiController.java
@@ -1,0 +1,21 @@
+package ru.khodov.springbootapp.controllers;
+
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+import ru.khodov.springbootapp.model.WeatherApi;
+import ru.khodov.springbootapp.service.WeatherApiService;
+
+@RestController
+@RequestMapping("/weather_api/current")
+@RequiredArgsConstructor
+public class WeatherApiController {
+
+    private final WeatherApiService weatherApiClient;
+
+    @GetMapping("{location}")
+    public ResponseEntity<WeatherApi> getCurrentWeather(@PathVariable String location) {
+        return weatherApiClient.getCurrentWeather(location);
+    }
+
+}
