# SpringBootApp/src/main/java/ru/khodov/springbootapp/model/Condition.java
@@ -1,0 +1,10 @@
+package ru.khodov.springbootapp.model;
+
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import lombok.Data;
+
+@Data
+@JsonIgnoreProperties(ignoreUnknown = true)
+public class Condition {
+    private String text;
+}
