# SpringBootApp/src/main/java/ru/khodov/springbootapp/model/WeatherApi.java
@@ -1,0 +1,15 @@
+package ru.khodov.springbootapp.model;
+
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import lombok.Data;
+
+@Data
+@JsonIgnoreProperties(ignoreUnknown = true)
+public class WeatherApi {
+    private Location location;
+    private Current current;
+}
+
+
+
+
